--- a/resources/[soz]/soz-hud/ui/index.html
+++ b/resources/[soz]/soz-hud/ui/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="app.css">
     <script src="app.js" defer></script>
+    <script src="elements/base.js" defer></script>
     <script src="elements/need.js" defer></script>
+    <script src="elements/vehicle.js" defer></script>
 </head>
 <body style="opacity: 0">
     <div class="statues">
@@ -14,6 +16,20 @@
         <player-need data-type="drunk" data-value="0"></player-need>
         <player-need data-type="hunger" data-value="100"></player-need>
         <player-need data-type="thirst" data-value="100"></player-need>
+    </div>
+    <div class="speedometer" style="opacity: 0">
+        <div class="seatbelt nobelt">
+            <svg>
+                <use xlink:href="sprite.svg#seatbelt"/>
+            </svg>
+        </div>
+        <div class="gauge">
+            <vehicle-speed data-value="0"></vehicle-speed>
+            <vehicle-fuel data-value="0"></vehicle-fuel>
+        </div>
+        <div class="lights">
+            <vehicle-light data-value="0"></vehicle-light>
+        </div>
     </div>
 </body>
 </html>
