feat(inventory): create container for fridge
Former-commit-id: bcc1217b2c48e9cdec783aca3a76789fca458d92

--- a/resources/[soz]/soz-inventory/ui/index.html
+++ b/resources/[soz]/soz-inventory/ui/index.html
@@ -9,7 +9,7 @@
     <script src="js/inventory_item.js" defer></script>
     <script src="js/app.js" defer></script>
 </head>
-<body>
+<body style="opacity: 0">
     <div class="container">
         <div class="player-inv">
             <header>Inventaire</header>
