--- a/resources/[soz]/soz-inventory/ui/index.html
+++ b/resources/[soz]/soz-inventory/ui/index.html
@@ -12,12 +12,12 @@
 <body style="opacity: 0">
     <div class="container">
         <div class="player-inv">
-            <header>Inventaire</header>
+            <header>Inventaire <span></span></header>
             <section id="player-inv"></section>
         </div>
 
         <div class="target-inv">
-            <header>Coffre</header>
+            <header>Coffre <span></span></header>
             <section id="target-inv"></section>
         </div>
     </div>
