feat(bank): center bank UI
Former-commit-id: 8473ea53562f9a4a2315ad897ee2fdb948fd3536

--- a/resources/[soz]/soz-bank/ui/index.html
+++ b/resources/[soz]/soz-bank/ui/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="col-9" style="padding-left: 0;padding-right: 0;">
                 <!-- Content Area -->
-                <div class="tab-content p-1 shadow-lg" id="v-pills-tabContent" style="height:800px;">
+                <div class="tab-content p-1 shadow-lg" id="v-pills-tabContent" style="height:70vh;">
                     <div class="tab-pane fade show active" id="bankingHome" role="tabpanel" aria-labelledby="bankingHome-tab" style="position: relative; top: 54px;">
                         <div class="container-fluid p-2">
                             <div class="row">
