feat(inventory): update font
Former-commit-id: ced3e69f53ba4d028cef9c4a02a02933ca30d8c5

--- a/resources/[soz]/soz-inventory/ui/index.html
+++ b/resources/[soz]/soz-inventory/ui/index.html
@@ -12,12 +12,12 @@
 <body style="opacity: 0">
     <div class="container">
         <div class="player-inv">
-            <header>Inventaire <span></span></header>
+            <header><span></span></header>
             <section id="player-inv"></section>
         </div>
 
         <div class="target-inv">
-            <header>Coffre <span></span></header>
+            <header><span></span></header>
             <section id="target-inv"></section>
         </div>
     </div>
