feat(bank): update button access
Former-commit-id: 6c8b7d4cccd943ad416ad343e8cf411d1f97bbd8

--- a/resources/[soz]/soz-bank/ui/index.html
+++ b/resources/[soz]/soz-bank/ui/index.html
@@ -160,16 +160,14 @@
                                                 </div>
                                                 <div class="row mt-2">
                                                     <div class="col-3 my-auto" style="font-size: 19px; color: white;"><label for="withdrawAmount"><small>Montant à retirer</small></label></div>
-                                                    <div class="col-9"><input type="number" placeholder="$" class="form-control" id="withdrawAmount" name="withdrawAmount"></div>
+                                                    <div class="col-7"><input type="number" placeholder="$" class="form-control" id="withdrawAmount" name="withdrawAmount"></div>
+                                                    <div class="col-2 text-center"><button class="btn" style="background-color: #28a745; color: white" id="initiateWithdraw">Retrait</button></div>
                                                 </div>
                                             </div>
 
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row" style="position: relative; top: 20px;">
-                                <div class="col-12 text-center"><button class="btn" style="background-color: #28a745; color: white" id="initiateWithdraw">Retrait complet</button></div>
                             </div>
                         </div>
                     </div>
@@ -217,16 +215,14 @@
                                                 </div>
                                                 <div class="row mt-2">
                                                     <div class="col-3 my-auto" style="font-size: 19px; color: white;"><label for="depositAmount"><small>Montant à déposer</small></label></div>
-                                                    <div class="col-9"><input type="number" placeholder="$" class="form-control" id="depositAmount" name="depositAmount"></div>
+                                                    <div class="col-7"><input type="number" placeholder="$" class="form-control" id="depositAmount" name="depositAmount"></div>
+                                                    <div class="col-2 text-center"><button class="btn" style="background-color: #28a745; color: white" id="initiateDeposit">Dépôt</button></div>
                                                 </div>
                                             </div>
 
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row" style="position: relative; top: 20px;">
-                                <div class="col-12 text-center"><button class="btn" style="background-color: #28a745; color: white" id="initiateDeposit">Dépôt complet</button></div>
                             </div>
                         </div>
                     </div>
