--- a/resources/[lib]/cui_character/ui/index.html
+++ b/resources/[lib]/cui_character/ui/index.html
@@ -22,20 +22,24 @@
             <div id="main">
                 <div id="tabs">
                     <button class="tablinks" id="tab-identity" onclick="openTab(event, 'identity')">
-                        Identity
+                        Identité
                         <img src="assets/icons/identity.svg">
                     </button>
                     <button class="tablinks" id="tab-features" onclick="openTab(event, 'features')">
-                        Features
+                        Physique
                         <img src="assets/icons/features.svg">
                     </button>
                     <button class="tablinks" id="tab-style"    onclick="openTab(event,    'style')">
-                        Style
+                        Soins
                         <img src="assets/icons/style.svg">
                     </button>
                     <button class="tablinks" id="tab-apparel"  onclick="openTab(event,  'apparel')">
-                        Apparel
+                        Vêtements
                         <img src="assets/icons/apparel.svg">
+                    </button>
+                    <button class="tablinks" id="tab-spawn"  onclick="openTab(event,  'spawn')">
+                        Tenues
+                        <img src="assets/icons/spawn.svg">
                     </button>
                 </div>
                 <div class="content">
@@ -47,13 +51,15 @@
                     </div>
                     <div id="apparel" class="tabcontent">
                     </div>
+                    <div id="spawn" class="tabcontent">
+                    </div>
                 </div>
                 <div class="panelbottom">
                     <button class="menuclose" id="accept">
-                        Accept
+                        Accepter
                     </button>
                     <button class="menuclose" id="cancel">
-                        Cancel
+                        Annuler
                     </button>
                 </div>
             </div>
@@ -69,10 +75,10 @@
                     </div>
                     <div class="panelbottom">
                         <button id="yes">
-                            Yes
+                            Oui
                         </button>
                         <button id="no">
-                            No
+                            Non
                         </button>
                     </div>
                 </div>
