--- a/resources/[lib]/cui_character/ui/pages/identity.html
+++ b/resources/[lib]/cui_character/ui/pages/identity.html
@@ -1,30 +1,30 @@
 <div class="group" id="gender">
-    <h2 class="header">Gender</h2>
+    <h2 class="header">Genre</h2>
     <div class="radioselect" id="sex">
         <div class="radioitem">
             <input type="radio" name="sex" value="0" id="male" checked />
             <label for="male">
-                Male
+                Homme
                 <img src="assets/icons/symbol-male.svg">
             </label>
         </div>
         <div class="radioitem">
             <input type="radio" name="sex" value="1" id="female" />
             <label for="female">
-                Female
+                Femme
                 <img src="assets/icons/symbol-female.svg">
             </label>
         </div>
     </div>
 </div>
 <div class="group" id="heritage">
-    <h2 class="header">Heritage</h2>
+    <h2 class="header">Héritage</h2>
     <div id="parentswindow">
         <img id="parentsdad" src="">
         <img id="parentsmom" src="">
     </div>
     <div class="list">
-        <h3 class="header">Mom</h3>
+        <h3 class="header">Mère</h3>
         <div class="controls">
             <button class="arrow left"></button>
             <select class="headblend" id="mom">
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div class="list">
-        <h3 class="header">Dad</h3>
+        <h3 class="header">Père</h3>
         <div class="controls">
             <button class="arrow left"></button>
             <select class="headblend" id="dad" data-type="headblend">
@@ -88,7 +88,7 @@
         </div>
     </div>
     <div class="slider contribution">
-        <h3 class="header">Resemblance</h3>
+        <h3 class="header">Ressemblance</h3>
         <div class="valuelabel left">50%</div>
         <div class="valuelabel right">50%</div>
         <div class="controls">
@@ -98,7 +98,7 @@
         </div>
     </div>
     <div class="slider contribution">
-        <h3 class="header">Skin tone</h3>
+        <h3 class="header">Teint peau</h3>
         <div class="valuelabel left">50%</div>
         <div class="valuelabel right">50%</div>
         <div class="controls">
