Revert "Merge branch 'SPAWN_V2' into 'main'"
This reverts merge request !171

Former-commit-id: 2b611c18de870b35e55a40e30850cb8dddf5180f

--- a/resources/[lib]/cui_character/ui/index.html
+++ b/resources/[lib]/cui_character/ui/index.html
@@ -22,24 +22,20 @@
             <div id="main">
                 <div id="tabs">
                     <button class="tablinks" id="tab-identity" onclick="openTab(event, 'identity')">
-                        Identité
+                        Identity
                         <img src="assets/icons/identity.svg">
                     </button>
                     <button class="tablinks" id="tab-features" onclick="openTab(event, 'features')">
-                        Physique
+                        Features
                         <img src="assets/icons/features.svg">
                     </button>
                     <button class="tablinks" id="tab-style"    onclick="openTab(event,    'style')">
-                        Soins
+                        Style
                         <img src="assets/icons/style.svg">
                     </button>
                     <button class="tablinks" id="tab-apparel"  onclick="openTab(event,  'apparel')">
-                        Vêtements
+                        Apparel
                         <img src="assets/icons/apparel.svg">
-                    </button>
-                    <button class="tablinks" id="tab-spawn"  onclick="openTab(event,  'spawn')">
-                        Tenues
-                        <img src="assets/icons/spawn.svg">
                     </button>
                 </div>
                 <div class="content">
@@ -51,15 +47,13 @@
                     </div>
                     <div id="apparel" class="tabcontent">
                     </div>
-                    <div id="spawn" class="tabcontent">
-                    </div>
                 </div>
                 <div class="panelbottom">
                     <button class="menuclose" id="accept">
-                        Accepter
+                        Accept
                     </button>
                     <button class="menuclose" id="cancel">
-                        Annuler
+                        Cancel
                     </button>
                 </div>
             </div>
@@ -75,10 +69,10 @@
                     </div>
                     <div class="panelbottom">
                         <button id="yes">
-                            Oui
+                            Yes
                         </button>
                         <button id="no">
-                            Non
+                            No
                         </button>
                     </div>
                 </div>
