--- a/resources/[soz]/soz-talk/html/index.html
+++ b/resources/[soz]/soz-talk/html/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <script type="module" crossorigin src="/html/assets/index.23bb84ba.js"></script>
+    <link rel="modulepreload" href="/html/assets/vendor.5aab0455.js">
+    <link rel="stylesheet" href="/html/assets/index.9b99a551.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    
   </body>
 </html>
