--- a/resources/[soz]/soz-character/ui/index.html
+++ b/resources/[soz]/soz-character/ui/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/html/assets/index.6d793ce7.js"></script>
-    <link rel="modulepreload" href="/html/assets/vendor.78b7f53b.js">
-    <link rel="stylesheet" href="/html/assets/index.c3eb7103.css">
   </head>
   <body>
     <div id="app"></div>
-    
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
