--- a/resources/[soz]/soz-driving-school/ui/index.html
+++ b/resources/[soz]/soz-driving-school/ui/index.html
@@ -4,28 +4,32 @@
         <link rel="stylesheet" href="driving-school.css">
     </head>
     <body>
-        <div id="wrapper" style="opacity: 0; transition-property: opacity; transition-duration: 500ms;">
-            <div class="container">
-                <img style="width: 500px;" id="bg" src="./background-licenses.png" alt="Permis">
-                <div class="content">
-                    <div class="is-half" id="left-col">
-                        <div>
-                            <div class="text-small">Nom</div>
-                            <div id="last_name" class="text-bold"></div>
+        <div class="super-wrapper" style="opacity: 0; transition-property: opacity; transition-duration: 500ms;">
+            <div class="wrapper">
+                <div class="container">
+                    <img style="width: 500px;" id="bg" src="./background-licenses.png" alt="Permis">
+
+                    <div class="content">
+                        <div class="is-half" id="left-col">
+                            <div>
+                                <div class="text-small">Nom</div>
+                                <div id="last_name"></div>
+                            </div>
+                            <div>
+                                <div class="text-small">Prénom(s)</div>
+                                <div id="first_name"></div>
+                            </div>
                         </div>
-                        <div>
-                            <div class="text-small">Prénom(s)</div>
-                            <div id="first_name" class="text-bold"></div>
+                        <div class="is-half" id="right-col">
+                            <div style="width: 10%;"></div>
+                            <div id="licenses" class="items"></div>
+                            <div id="points" class="items"></div>
                         </div>
-                    </div>
-                    <div class="is-half" id="right-col">
-                        <div id="icons" class="items"></div>
-                        <div id="licenses" class="items"></div>
-                        <div id="points" class="items"></div>
                     </div>
                 </div>
             </div>
         </div>
+
         <script src="driving-school.js" type="application/javascript" defer></script>
     </body>
 </html>
