Made UI more responsive
Former-commit-id: 9d0801458215f7326070e5de89a0c8cea7892191

--- a/resources/[soz]/soz-driving-school/ui/index.html
+++ b/resources/[soz]/soz-driving-school/ui/index.html
@@ -7,7 +7,7 @@
         <div class="super-wrapper" style="opacity: 0; transition-property: opacity; transition-duration: 500ms;">
             <div class="wrapper">
                 <div class="container">
-                    <img style="width: 500px;" id="bg" src="./background-licenses.png" alt="Permis">
+                    <img id="bg-img" src="./background-licenses.png" alt="Permis">
 
                     <div class="content">
                         <div class="is-half" id="left-col">
