--- a/resources/[soz]/soz-loadscreen/index.html
+++ b/resources/[soz]/soz-loadscreen/index.html
@@ -11,8 +11,14 @@
 <body>
     <div id="app">
         <div class="info">
-            <p class="play"><strong>Espace</strong> pour couper le son</p>
-            <p class="pause" style="display: none"><strong>Espace</strong> pour remettre le son</p>
+            <svg class="play" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            <svg class="pause" style="display: none" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="1">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            Contrôler la musique
         </div>
         <video src="assets/loading.mp4" autoplay loop width="100%"></video>
         <audio src="assets/musique.mp3" autoplay loop></audio>
