Smooth transition for loading screen
Former-commit-id: 2dde8abc3f938f41b2b69e2206e12a9f231dccf1

--- a/resources/[soz]/soz-loadscreen/index.html
+++ b/resources/[soz]/soz-loadscreen/index.html
@@ -20,7 +20,7 @@
             </svg>
             Contrôler la musique
         </div>
-        <video src="assets/loading.mp4" autoplay loop width="100%"></video>
+        <video id="video" src="assets/loading.mp4" autoplay loop width="100%"></video>
         <audio src="assets/musique.mp3" autoplay loop></audio>
     </div>
 </body>
