Finish soz-identity ID card with mugshot
Former-commit-id: 55f43bade231882dcf407f9271b537d168400352

--- a/resources/[soz]/soz-identity/ui/index.html
+++ b/resources/[soz]/soz-identity/ui/index.html
@@ -11,7 +11,9 @@
                     <img class="bg-img "src="./background-identity.png" alt="Identité">
 
                     <div class="content">
-                        <div class="is-half left-col" id="left-col-identity"></div>
+                        <div class="is-half left-col" id="left-col-identity">
+                            <img id="mugshot" />
+                        </div>
                         <div class="is-half right-col" id="right-col-identity"></div>
                     </div>
                 </div>
