--- a/resources/[soz]/soz-character/html/index.html
+++ b/resources/[soz]/soz-character/html/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/html/assets/index.58e7a907.js"></script>
-    <link rel="modulepreload" href="/html/assets/vendor.78b7f53b.js">
-    <link rel="stylesheet" href="/html/assets/index.e731b8a6.css">
+    <script type="module" crossorigin src="/html/assets/index.js"></script>
+    <link rel="modulepreload" href="/html/assets/vendor.js">
+    <link rel="stylesheet" href="/html/assets/index.css">
   </head>
   <body>
     <div id="app"></div>
