--- a/resources/[soz]/soz-hud/html/index.html
+++ b/resources/[soz]/soz-hud/html/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/html/assets/index.3884fa43.js"></script>
-    <link rel="modulepreload" href="/html/assets/vendor.9870ef56.js">
-    <link rel="stylesheet" href="/html/assets/index.aa37e35e.css">
+    <script type="module" crossorigin src="/html/assets/index.js"></script>
+    <link rel="modulepreload" href="/html/assets/vendor.js">
+    <link rel="stylesheet" href="/html/assets/index.css">
   </head>
   <body>
     <div id="app"></div>
