--- a/resources/[soz]/soz-talk/html/index.html
+++ b/resources/[soz]/soz-talk/html/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/html/assets/index.abea9a5b.js"></script>
-    <link rel="modulepreload" href="/html/assets/vendor.33e6ab9e.js">
-    <link rel="stylesheet" href="/html/assets/index.6eef4aab.css">
+    <script type="module" crossorigin src="/html/assets/index.js"></script>
+    <link rel="modulepreload" href="/html/assets/vendor.js">
+    <link rel="stylesheet" href="/html/assets/index.css">
   </head>
   <body>
     <div id="app"></div>
