feat(qb): revamp frontend
Former-commit-id: 1771cd5e9d98e969f9ccdb406a317bcc93f52e85

--- a/resources/[qb]/qb-target/html/index.html
+++ b/resources/[qb]/qb-target/html/index.html
@@ -28,11 +28,9 @@
 </head>
 
 <body>
-    <div id="target-wrapper">
-        <q-icon id="target-eye" :name="CurrentIcon" v-show="Show" :style="TargetEyeStyleObject"></q-icon>
-        <div id="target-label-wrapper">
-            <div id="target-label" v-html="TargetHTML"></div>
-        </div>
+    <div id="app">
+        <q-icon id="target-pointer" :name="CurrentIcon" v-show="Show" :style="TargetEyeStyleObject"></q-icon>
+        <div id="target-wrapper" v-html="TargetHTML"></div>
     </div>
 </body>
 
