fix(bank): translate missing strings
Former-commit-id: fc2e72ef2e230bb097729003076b336800a729e0

--- a/resources/[soz]/soz-bank/ui/index.html
+++ b/resources/[soz]/soz-bank/ui/index.html
@@ -234,7 +234,8 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-12" style="font-size: 12px; color:white">Transfer money to another account simply by entering the dedicated number of that account and the amount to transfer.
+                                <div class="col-12" style="font-size: 12px; color:white">
+                                    Transférez de l'argent vers un autre compte en saisissant simplement le numéro dédié de ce compte et le montant à transférer.
                                 </div>
                             </div>
                             <div class="row">
@@ -270,7 +271,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12 text-center" style="position: relative; top: 20px;">
-                                    <button class="btn" id="initiateTransfer" style="background-color: #28a745; color: white">Complete Transfer</button>
+                                    <button class="btn" id="initiateTransfer" style="background-color: #28a745; color: white">Transférer</button>
                                 </div>
                             </div>
                         </div>
